--- a/package.json
+++ b/package.json
@@ -1,11 +1,11 @@
 {
     "name": "boilerplate",
     "version": "1.0.0",
-    "description": "📦🚀 Electron Parcel Boilerplate",
+    "description": "📦🚀 React Electron Parcel Boilerplate",
     "main": "src/electron/index.js",
     "scripts": {
         "start": "node scripts/start.js",
-        "electron": "electron --debug .",
+        "electron": "electron .",
         "build": "node scripts/build.js"
     },
     "keywords": [
@@ -17,16 +17,14 @@
     "license": "ISC",
     "dependencies": {
         "react": "17.0.1",
-        "react-dom": "17.0.1",
-        "simplex-noise": "^3.0.1"
+        "react-dom": "17.0.1"
     },
     "devDependencies": {
-        "electron": "^11.1.1",
+        "electron": "11.1.1",
         "electron-packager": "15.2.0",
         "electron-reloader": "1.1.0",
         "electron-winstaller": "4.0.1",
         "parcel-bundler": "1.12.4",
-        "sass": "1.36.0",
-        "typescript": "^4.6.3"
+        "sass": "1.36.0"
     }
 }
